--- a/style.css
+++ b/style.css
@@ -540,20 +540,23 @@ section .title::after{
   align-items: center;
 }
 .right form .button-area button{
-    display: inline-block;
-    background: rgb(1, 111, 255);
-    color: #fff;
-    font-size: 25px;
-    padding: 12px 36px;
-    margin-top: 20px;
-    font-weight: 400;
-    border-radius: 6px;
-    border: 2px solid rgb(1, 111, 255);
-    transition: all 0.3s ease;
+  color: #fff;
+  display: block;
+  width: 160px!important;
+  height: 45px;
+  outline: none;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 6px;
+  cursor: pointer;
+  flex-wrap: nowrap;
+  background: rgb(255, 1, 1);
+  border: 2px solid rgb(255, 1, 1);
+  transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-    color: rgb(1, 111, 255);
-    background: none;
+  color: rgb(255, 1, 1);
+  background: none;
 }
 /* footer section styling */
 footer{
