--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@ html{
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background: #ffffff;
+    background: #ff0000;
 }
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #ffa600;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #ffbb00;
 }
 
 /* all similar content styling codes */
@@ -71,7 +71,7 @@ section .title::after{
     bottom: -8px;
     left: 50%;
     font-size: 20px;
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     padding: 0 5px;
     background: #fff;
     transform: translateX(-50%);
@@ -88,7 +88,7 @@ section .title::after{
 }
 .navbar.sticky{
     padding: 15px 0;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
 }
 .navbar .max-width{
     display: flex;
@@ -96,12 +96,12 @@ section .title::after{
     justify-content: space-between;
 }
 .navbar .logo a{
-    color: #71b3e9;
+    color: #e97171;
     font-size: 35px;
     font-weight: 600;
 }
 .navbar .logo a span{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     transition: all 0.3s ease;
 }
 .navbar.sticky .logo a span{
@@ -120,7 +120,7 @@ section .title::after{
     transition: color 0.3s ease;
 }
 .navbar .menu li a:hover{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
 }
 .navbar.sticky .menu li a:hover{
     color: #fff;
@@ -128,7 +128,7 @@ section .title::after{
 
 /* menu btn styling */
 .menu-btn{
-    color: #fff;
+    color: #ff0000;
     font-size: 23px;
     cursor: pointer;
     display: none;
@@ -137,7 +137,7 @@ section .title::after{
     position: fixed;
     height: 45px;
     width: 42px;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
     right: 30px;
     bottom: 10px;
     text-align: center;
@@ -193,29 +193,29 @@ section .title::after{
     margin: 5px 0;
 }
 .home .home-content .text-3 span{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     font-weight: 500;
 }
 .home .home-content a{
     display: inline-block;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
     color: #fff;
     font-size: 25px;
     padding: 12px 36px;
     margin-top: 20px;
     font-weight: 400;
     border-radius: 6px;
-    border: 2px solid rgb(1, 111, 255);
+    border: 2px solid rgb(255, 1, 1);
     transition: all 0.3s ease;
 }
 .home .home-content a:hover{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     background: none;
 }
 
 /* about section styling */
 .about .title::after{
-    content: "who i am";
+    content: "About Me";
 }
 .about .about-content .left{
     width: 45%;
@@ -235,31 +235,31 @@ section .title::after{
     margin-bottom: 10px;
 }
 .about .about-content .right .text span{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
 }
 .about .about-content .right p{
     text-align: justify;
 }
 .about .about-content .right a{
     display: inline-block;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 0, 0);
     color: #fff;
     font-size: 20px;
     font-weight: 500;
     padding: 10px 30px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid rgb(1, 111, 255);
+    border: 2px solid rgb(255, 1, 1);
     transition: all 0.3s ease;
 }
 .about .about-content .right a:hover{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     background: none;
 }
 
 /* services section styling */
 .services, .teams{
-    color:#fff;
+    color:#ff0000;
     background: #111;
 }
 .services .title::before,
@@ -269,7 +269,7 @@ section .title::after{
 .services .title::after,
 .teams .title::after{
     background: #111;
-    content: "what i provide";
+    content: "What I Provide";
 }
 .services .serv-content .card{
     width: calc(33% - 20px);
@@ -281,7 +281,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .services .serv-content .card:hover{
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
 }
 .services .serv-content .card .box{
     transition: all 0.3s ease;
@@ -291,7 +291,7 @@ section .title::after{
 }
 .services .serv-content .card i{
     font-size: 50px;
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     transition: color 0.3s ease;
 }
 .services .serv-content .card:hover i{
@@ -306,7 +306,7 @@ section .title::after{
 /* skills section styling */
 
 .skills .title::after{
-    content: "what i know";
+    content: "My Skills";
 }
 .skills .skills-content .column{
     width: calc(50% - 30px);
@@ -321,18 +321,18 @@ section .title::after{
 }
 .skills .skills-content .left a{
     display: inline-block;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
     color: #fff;
     font-size: 18px;
     font-weight: 500;
     padding: 8px 16px;
     margin-top: 20px;
     border-radius: 6px;
-    border: 2px solid rgb(1, 111, 255);
+    border: 2px solid rgb(255, 1, 1);
     transition: all 0.3s ease;
 }
 .skills .skills-content .left a:hover{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     background: none;
 }
 .skills .skills-content .right .bars{
@@ -360,7 +360,7 @@ section .title::after{
     height: 100%;
     left: 0;
     top: 0;
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
 }
 .skills-content .right .html::before{
     width: 90%;
@@ -380,7 +380,7 @@ section .title::after{
 
 /* teams section styling */
 .teams .title::after{
-    content: "who with me";
+    content: "My Team";
 }
 .teams .carousel .card{
     background: #222;
@@ -391,7 +391,7 @@ section .title::after{
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover{
-    background: rgb(1, 111, 255);
+    background: rgb(255, 1, 1);
 }
 .teams .carousel .card .box{
     display: flex;
@@ -413,7 +413,7 @@ section .title::after{
     width: 150px;
     object-fit: cover;
     border-radius: 50%;
-    border: 5px solid rgb(1, 111, 255);
+    border: 5px solid rgb(255, 1, 1);
     transition: all 0.3s ease;
 }
 .teams .carousel .card:hover img{
@@ -429,7 +429,7 @@ section .title::after{
     margin: 0 5px;
     outline: none!important;
     border-radius: 50%;
-    border: 2px solid rgb(1, 111, 255)!important;
+    border: 2px solid rgb(255, 1, 1)!important;
     transition: all 0.3s ease;
 }
 .owl-dot.active{
@@ -438,12 +438,12 @@ section .title::after{
 }
 .owl-dot.active,
 .owl-dot:hover{
-    background: rgb(1, 111, 255)!important;
+    background: rgb(255, 1, 1)!important;
 }
 
 /* contact section styling */
 .contact .title::after{
-    content: "get in touch";
+    content: "Let's Get in Contact!";
 }
 .contact .contact-content .column{
     width: calc(50% - 30px);
@@ -528,12 +528,12 @@ section .title::after{
   border-radius: 6px;
   cursor: pointer;
   flex-wrap: nowrap;
-  background: rgb(1, 111, 255);
-  border: 2px solid rgb(1, 111, 255);
+  background: rgb(255, 1, 1);
+  border: 2px solid rgb(255, 1, 1);
   transition: all 0.3s ease;
 }
 .right form .button-area button:hover{
-  color: rgb(1, 111, 255);
+  color: rgb(255, 1, 1);
   background: none;
 }
 /* footer section styling */
@@ -544,7 +544,7 @@ footer{
     text-align: center;
 }
 footer span a{
-    color: rgb(1, 111, 255);
+    color: rgb(255, 1, 1);
     text-decoration: none;
 }
 footer span a:hover{
